--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,24 @@ hr {
   background-color: rgba(235, 239, 242, 1);
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+  color: rgba(25, 42, 62, 1);
+}
+
+a:active {
+  text-decoration: none;
+  color: rgba(200, 200, 200);
+}
+
+a:visited {
+  text-decoration: none;
+}
+
 .main-page {
   background-color: #e5e5e5;
 }
@@ -196,6 +214,7 @@ hr {
 
 .calendar {
   margin: 46px auto;
+  margin-bottom: 116px;
   text-align: center;
   width: 587px;
   font-family: 'Poppins', sans-serif;
@@ -217,6 +236,104 @@ hr {
 
 .mon {
   color: rgba(16, 156, 241, 1);
+}
+
+.tasks-preview {
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.08);
+  border-radius: 4px;
+  height: 126px;
+  margin: 24px;
+}
+
+.objective-and-type {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0;
+}
+
+.objective {
+  color: rgb(50, 60, 71);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 15px;
+  margin-left: 12px;
+}
+
+.type {
+  color: rgba(144, 160, 183, 1);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  margin-right: 12px;
+}
+
+.due-date {
+  color: rgb(200, 200, 200);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 13px;
+  margin: 0 16px;
+}
+
+.due-date-date {
+  color: rgb(76, 88, 98);
+}
+
+.user_and_status {
+  display: flex;
+  margin: 18px 16px;
+}
+
+.avatar_user {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+}
+
+.user_name {
+  color: rgb(112, 118, 131);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 13px;
+  margin-left: 10px;
+  margin-right: 340px;
+  text-align: center;
+  white-space: nowrap;
+  margin-top: 6px;
+}
+
+.btn-status {
+  background-color: #2ed47a;
+  color: rgb(255, 255, 255);
+  width: 84px;
+  height: 22px;
+  border-radius: 4px;
+  text-align: center;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+}
+
+.not-ended-margin {
+  margin-right: 220px;
+}
+
+.btn-not-ended {
+  background-color: #f7685b;
+  margin-left: 26px;
+}
+
+.show-more {
+  position: relative;
+}
+
+.show_more-a-tag {
+  width: 100%;
+  display: flex; /*CSS3*/
+  align-items: center; /*Vertical align*/
+  justify-content: center; /*horizontal align*/
+  margin-top: 50px;
+  color: rgb(16, 156, 241);
 }
 
 @media screen and (max-width: 960px) {
