--- a/styles.css
+++ b/styles.css
@@ -360,6 +360,12 @@ a:visited {
   }
 }
 
+@media screen and (max-width: 730px) {
+  .flex-horizontal-on-page-size {
+    flex-direction: column;
+  }
+}
+
 /* ids */
 
 #first-item {
