--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ html {
 
 body {
   height: 100%;
+  background-color: #e5e5e5;
 }
 
 ul {
@@ -44,10 +45,6 @@ a:active {
 
 a:visited {
   text-decoration: none;
-}
-
-.main-page {
-  background-color: #e5e5e5;
 }
 
 /* container of the page */
@@ -337,13 +334,17 @@ a:visited {
   color: rgb(16, 156, 241);
 }
 
-.deals {
+.deals-and-tasks {
   width: 445px;
   height: 344px;
   margin-top: 35px;
 }
 
-.deals-header {
+.tasks-margin-top {
+  margin-top: 30px;
+}
+
+.deals-and-tasks-header {
   color: rgba(25, 42, 62, 1);
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
@@ -353,7 +354,7 @@ a:visited {
 
 .curve_chart_styleing {
   color: rgba(76, 88, 98, 1);
-  width: 365px;
+  width: 90%;
   height: 176px;
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
@@ -382,9 +383,12 @@ a:visited {
   .side-manue {
     display: none;
   }
-}
 
-@media screen and (max-width: 730px) {
+  .deals-and-tasks {
+    margin-left: 30px;
+    width: 635px;
+  }
+
   .flex-horizontal-on-page-size {
     flex-direction: column;
   }
